# BTW2025-TSL-Tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_hooks.sh
.devcontainer/: Dockerfile  devcontainer.json
scripts/: setup_tsl.sh
src/: column.hpp  filter_aggregate.cpp  filter_aggregate.hpp  filter_aggregate_live.hpp  hello_tsl.cpp  simd_utils.hpp
